css/style.css
body,
figure{
    margin: 0;
}

.top{
    width: 100%;
    height: 110px;
    background-color: deepskyblue;
    background-image: url('../img/pattern.png');
    background-size: contain;
}

.booleanlogo{
    width: 200px;
    height: 100px;
    padding-top: 30px;
    padding-left: 28%;
}

h1{
    padding-top: 10px;
    margin-bottom: 0;
}
span.booleaner{
    color: cornflowerblue;
}

time,
address.author{
    color: grey;
    font-style: normal;
}

time{
    font-size: 10px;
}

#tim{
    padding-top: 10px;
}

address.photographers{
    font-style: normal;
    font-size: 12px;
}

span.highlighted{
    background-color: yellow;
}

ul{
    padding: 0 0 0 20px;
}

table{
    border-collapse: collapse;
}

thead{
    background-color: dodgerblue;
}

th{
    color: white;
}

.cells{
    padding-left: 0;
    width: 300px
    
}

#string1,
#string3{
    background-color: rgba(0, 174, 255, 0.205)
}

h3{
    color: grey;
}

.imgfooter1{
    width: 207px;
    height: 207px;
    background-image: url('../img/monitor.jpg');
    background-size: cover;
    background-position: center;
}

.imgfooter2{
    width: 207px;
    height: 207px;
    background-image: url('../img/graph.jpg');
    background-size: cover;
    background-position: center;
    margin-bottom: 10px;
}

.link1,
.link2{
    font-weight: 600;
    padding: 10px 10px;
    margin-top: 10px;
    color:white
    
}

.container{
    max-width: 1100px;
    margin: 0 auto;
}

